--- a/Frontend/src/components/Nav.css
+++ b/Frontend/src/components/Nav.css
@@ -4,6 +4,10 @@ nav {
   display: flex;
   justify-content: space-around;
   font-size: 1.5em;
+  background-image: url('https://i.imgur.com/fTO9Oko.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 nav a {
@@ -26,6 +30,6 @@ button {
 }
 
 button:hover {
-  background-color: #f3f3f3;
-  color: #ff85a2;
+  background-color: #ff85a2;
+  color: white;
 }
